# ai-employee

./: .gitignore  Business_Goals.md  Company_Handbook.md  Dashboard.md  README.md  SUBMISSION.md
.claude/: settings.json
Briefings/: 2026-02-26_CEO_Briefing.md
Done/: EMAIL_20260223_162352_2113.md  EMAIL_20260223_162352_2114.md  EMAIL_20260223_162353_2115.md  EMAIL_20260223_162353_2116.md  EMAIL_20260223_162354_2117.md  EMAIL_20260224_210221_2121.md  EMAIL_20260224_210222_2122.md  EMAIL_20260224_210223_2123.md  EMAIL_20260224_210224_2124.md  EMAIL_20260224_210225_2125.md  EMAIL_20260224_210426_2111.md  EMAIL_20260224_210427_2112.md  EMAIL_20260224_210428_2118.md  EMAIL_20260224_210429_2119.md  EMAIL_20260224_210430_2120.md  EMAIL_20260224_210627_2106.md  EMAIL_20260224_210627_2107.md  EMAIL_20260224_210628_2108.md  EMAIL_20260224_210628_2109.md  EMAIL_20260224_210628_2110.md  EMAIL_20260224_210830_2101.md  EMAIL_20260224_210830_2102.md  EMAIL_20260224_210832_2104.md  EMAIL_20260224_211035_2096.md  EMAIL_20260224_211036_2097.md  EMAIL_20260224_211037_2098.md  EMAIL_20260224_211038_2099.md  FILE_0400041890809_680018024770.md  TASK_001_DraftLinkedPost.md  TASK_002_WeeklyStatusUpdate.md
Needs_Action/: EMAIL_20260224_210831_2103.md  EMAIL_20260224_210832_2105.md  EMAIL_20260224_211039_2100.md
Pending_Approval/: Email_FollowUp_INV-001_Ahmed.md
Plans/: Plan_20260224_ProcessEmails.md  (+3 more)
ai-employee/: audit_logger.py  auth_gmail.py  filesystem_watcher.py  gmail_watcher.py  linkedin_poster.py  pyproject.toml  run_claude.sh  social_poster.py  twitter_poster.py
(+17 files in other folders)
